导入了超级电容控制模块代码与功率控制代码，并解决了兼容性报错问题，相关代码亟需规范

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ include_directories(
         User/components/device/BMI088
         User/components/device/IST8310
         User/components/device/ws2812
+        User/components/device/supercap
         #  component/support
         User/components/support
         User/components/support/vofa+
